Bug 274232 - No method to add/remove groups
Summary: No method to add/remove groups
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-27 00:33 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-05-27 00:33:02 UTC
Version:           unspecified
OS:                Linux

We can move contact between groups, but not edit the groups themselves. This needs fixing.

Reproducible: Didn't try
Comment 1 Martin Klapetek 2011-07-18 13:46:51 UTC
Git commit c568a96e51801bff7f5e3248e24235df32d653ca by Martin Klapetek.
Committed on 18/07/2011 at 15:30.
Pushed by mklapetek into branch 'master'.

Groups context menu + menu refactor.

BUG: 274232
REVIEW: 101985
Reviewed-by: David Edmundson

M  +133  -23   main-widget.cpp
M  +6    -0    main-widget.h

http://commits.kde.org/telepathy-contact-list/c568a96e51801bff7f5e3248e24235df32d653ca