Groups context menu + menu refactor.

BUG: 274232
REVIEW: 101985
Reviewed-by: David Edmundson